gitops/apps/pihole/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - pihole.apps.internal
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
